deploy/devume-client/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devume-client
  namespace: devume
spec:
  selector:
    matchLabels:
      app: devume-client
  replicas: 2
  template:
    metadata:
      labels:
        app: devume-client
    spec:
      containers:
        - name: devume-client
          image: 10.105.58.187:5000/devume-client:12
          imagePullPolicy: Always
          ports:
          - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
