deploy/devume-client/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devume-client
  namespace: devume
spec:
  selector:
    app: devume-client
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 3000
