deploy/devume-client/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devume-client-ingress
  namespace: devume
  annotations:
    kubernetes.io/ingress.class: nginx
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: devume.ink
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devume-client
            port:
              number: 3000
